Starting splash screen fixed used beamercolorbox

--- a/template.tex
+++ b/template.tex
@@ -50,8 +50,11 @@
     \bgroup
     \setbeamercolor{background canvas}{bg=bluecern}
     \frame[plain]{
-        \centering
-        \fcolorbox{bluecern}{white}{\includegraphics[scale=0.9]{./logos/LogoBadge-01.png}}
+        \hfill
+        \begin{beamercolorbox}[wd=4.5cm]{normal text}
+            \includegraphics[scale=0.9]{./logos/LogoBadge-01.png}
+        \end{beamercolorbox}
+        \hfill\hfill
     }
     \egroup
 
@@ -112,7 +115,7 @@
         \centering
         \vspace{10px}
         \begin{figure}
-            \includegraphics[scale=1.35]{./logos/LogoBadge-02.png} \\
+            \includegraphics[scale=.8]{./logos/LogoBadge-01.png} \\
             \textbf{www.cern.ch}
         \end{figure}
     }
