Added Grey background colors for block and alertblock environments

--- a/template.tex
+++ b/template.tex
@@ -14,11 +14,15 @@
 \definecolor{bluecern}{HTML}{0053A1}
 \setbeamercolor{normal text}{fg=bluecern, bg=white}
 \setbeamercolor{frametitle}{fg=bluecern, bg=white}
-\setbeamercolor{block title}{fg=bluecern, bg=white}
 \setbeamercolor{section in toc}{fg=bluecern, bg=white}
 \setbeamercolor{title}{fg=bluecern, bg=white}
 \setbeamercolor{inverted normal text}{fg=white, bg=bluecern}
-\setbeamercolor{logo}{bg=white, fg=bluecern}
+\setbeamercolor{itemize item}{fg=bluecern}
+
+\setbeamercolor{block title}{fg=bluecern, bg=gray!30}
+\setbeamercolor{block body}{fg=bluecern, bg=gray!10}
+\setbeamercolor{block title alerted}{bg=gray!30}
+\setbeamercolor{block body alerted}{bg=gray!10}
 
 % Footline
 \setbeamerfont{footline}{size=\large}
