Changed aspect ratio to 16:9

--- a/template.tex
+++ b/template.tex
@@ -1,6 +1,6 @@
-% Latex Beamer template following CERN template guidelines
+% Latex Beamer template following CERN template guidelines (or trying!)
 
-\documentclass{beamer}
+\documentclass[aspectratio=169]{beamer}
 \usepackage{xcolor}
 \usepackage{graphicx}
 \usepackage{multicol}
