--- a/template.tex
+++ b/template.tex
@@ -5,56 +5,13 @@
 \usepackage{graphicx}
 \usepackage{multicol}
 
+\usetheme{CERN}
 
 % Preamble
 \title{Stuff we want to talk about}
 \author[A.u.thor]{Guy talking about the stuff \newline \texttt{author@email}}
 \date{\today}
 
-
-% Colors
-\definecolor{bluecern}{HTML}{0053A1}
-\setbeamercolor{normal text}{fg=bluecern, bg=white}
-\setbeamercolor{frametitle}{fg=bluecern, bg=white}
-\setbeamercolor{section in toc}{fg=bluecern, bg=white}
-\setbeamercolor{title}{fg=bluecern, bg=white}
-\setbeamercolor{inverted normal text}{fg=white, bg=bluecern}
-\setbeamercolor{itemize item}{fg=bluecern}
-\setbeamercolor{itemize subitem}{fg=bluecern}
-\setbeamercolor{itemize subsubitem}{fg=bluecern}
-\setbeamercolor{enumerate item}{fg=bluecern}
-\setbeamercolor{enumerate subitem}{fg=bluecern}
-\setbeamercolor{caption name}{fg=bluecern}
-\setbeamercolor{block title}{fg=bluecern, bg=gray!30}
-\setbeamercolor{block body}{fg=bluecern, bg=gray!10}
-\setbeamercolor{block title alerted}{bg=gray!30}
-\setbeamercolor{block body alerted}{bg=gray!10}
-
-% Fonts
-\usefonttheme{structurebold}
-\setbeamerfont{title}{size=\Huge}
-
-% Shapes
-%\setbeamertemplate{itemize item}[square]
-
-% Footline
-\setbeamerfont{footline}{size=\large}
-\setbeamertemplate{footline}{
-    \begin{beamercolorbox}[ht=20px, center]{inverted normal text}
-    \begin{columns}
-    \column{.001\textwidth}
-    \column{.15\textwidth}
-        \vspace{2px} % To lift logo from bottom
-        \includegraphics[scale=0.35]{logos/cern-logo-small.png}
-    \column{.45\textwidth}
-        \insertshorttitle
-    \column{.20\textwidth}
-    01/10/2014
-    \column{.1\textwidth}
-        \insertpagenumber
-    \end{columns}
-    \end{beamercolorbox}
-}
 
 % Body
 \begin{document}
