--- a/template.tex
+++ b/template.tex
@@ -12,21 +12,10 @@
 \author[A.u.thor]{Guy talking about the stuff \newline \texttt{author@email}}
 \date{\today}
 
-
 % Body
 \begin{document}
     
-    % CERN blue splash page slide with white logo
-    \bgroup
-    \setbeamertemplate{navigation symbols}{}
-    \setbeamercolor{background canvas}{bg=bluecern}
-    \frame[plain]{
-        \hfill
-        \vspace{-1.5cm}
-        \includegraphics[scale=0.37]{logos/cern-logo-white-on-blue.png}
-        \hfill\hfill
-    }
-    \egroup
+    \cernSplashBlue
 
     % Title
     {
@@ -145,19 +134,7 @@
     }
 
     \section{}
-    % CERN ending slide with blue logo and web page
-    \bgroup
-    \setbeamertemplate{navigation symbols}{}
-    \setbeamercolor{background canvas}{bg=white}
-    \frame[plain]{
-        \centering
-        \vspace{10px}
-        \begin{figure}
-            \includegraphics[scale=.61]{./logos/LogoBadge-01.png} \\
-            {\Large \textbf{www.cern.ch}}
-        \end{figure}
-    }
-    \egroup
+    \cernSplashWhite
 
 \end{document}
 
