Changed fixed date for placeholder in footline

--- a/beamerthemeCERN.sty
+++ b/beamerthemeCERN.sty
@@ -39,7 +39,7 @@
     \column{.45\textwidth}
         \insertshorttitle
     \column{.20\textwidth}
-    01/10/2014
+    DD/MM/YYYY
     \column{.1\textwidth}
         \insertpagenumber
     \end{columns}
