Current date in the footer
Changed the "DD/MM/YY" string in the footline for a call to the "\today" command, so the date in the footer is the same as the one in the title.

--- a/beamerthemeCERN.sty
+++ b/beamerthemeCERN.sty
@@ -39,7 +39,7 @@
     \column{.45\textwidth}
         \insertshorttitle
     \column{.20\textwidth}
-    DD/MM/YYYY
+        \today
     \column{.1\textwidth}
         \insertpagenumber
     \end{columns}
