Forced a blank short title by default.
When entering a long title (i.e., "My super awesome title that is really long. But seriously, it's long"), the title will run over the date in the footer.
This way, if no short title is specified, nothing will be shown in the footer, preserving the date.

--- a/template.tex
+++ b/template.tex
@@ -8,7 +8,7 @@
 \usetheme{CERN}
 
 % Preamble
-\title{Stuff we want to talk about}
+\title[]{Stuff we want to talk about}
 \author[A.u.thor]{Guy talking about the stuff \newline \texttt{author@email}}
 \date{\today}
 
