--- a/template.tex
+++ b/template.tex
@@ -7,10 +7,14 @@
 
 \usetheme{CERN}
 
+% Talk date
+% Uncomment this to define a presentation date distinct from \today
+% \def\mydate{20 Feb 2000}
+
 % Preamble
-\title{Stuff we want to talk about}
-\author[A.u.thor]{Guy talking about the stuff \newline \texttt{author@email}}
-\date{\today}
+\title{Title}
+\subtitle{Subtitle}
+\author[Author]{\texorpdfstring{\url{name.surname@cern.ch}}{Author}}
 
 % Body
 \begin{document}
