--- a/beamerthemeCERN.sty
+++ b/beamerthemeCERN.sty
@@ -25,7 +25,22 @@
 
 % Fonts
 \usefonttheme{structurebold}
-\setbeamerfont{title}{size=\Huge}
+\usepackage[scaled]{helvet}
+\renewcommand*\familydefault{\sfdefault}
+\usepackage[T1]{fontenc}
+
+% Title page
+\setbeamertemplate{title page}{
+    \begin{center}
+        { \Huge \textbf{\inserttitle} }
+        \vfill
+        { \Large \insertsubtitle }
+        \vfill
+        \insertauthor
+        \vfill
+        \talkdate 
+    \end{center}
+}
 
 % Footline
 \setbeamerfont{footline}{size=\large}
@@ -39,11 +54,21 @@
     \column{.45\textwidth}
         \insertshorttitle
     \column{.20\textwidth}
-    DD/MM/YYYY
+	\talkdate
     \column{.1\textwidth}
         \insertpagenumber
     \end{columns}
     \end{beamercolorbox}
+}
+
+\newcommand{\talkdate}{
+  \@ifundefined{mydate}
+	{
+	\today
+	}
+	{
+	\mydate
+	}
 }
 
 \newcommand{\cernSplashBlue}{
