disable navigation icons

--- a/template.tex
+++ b/template.tex
@@ -37,6 +37,9 @@
 	  }
 }
 
+% disable navigation icons - realistically nobody uses them
+\setbeamertemplate{navigation symbols}{}
+
 
 % Talk date
 % Uncomment this to define a presentation date distinct from \today
