--- a/template.tex
+++ b/template.tex
@@ -79,7 +79,7 @@
         \frametitle{This is the first slide}
         %Content goes here
         \begin{block}{Ideas}
-            See how this loooks
+            See how this looks
         \end{block}
         \begin{itemize}
             \item Item 1
